# RabbitIO

./: .readthedocs.yaml  CMakeLists.txt  Examples.cpp  README.md  RabbitStat.cpp  TestCount.cpp  TestCount_se.cpp  main.cpp
doc/sphinx/: .readthedoc.yaml  Doxyfile  api.rst  conf.py  index.rst
doc/sphinx/API/: api.rst
io/: Buffer.h  DataPool.h  DataQueue.h  DataStream.h  FastxChunk.h  FastxStream.cpp  FastxStream.h  FileReader.h  Formater.cpp  Formater.h  Globals.h  Reference.h  utils.h
src/: .FastaStream.cpp.swp  main.cpp
src/io/: Buffer.h  DataPool.h  FastxIO.cpp  FastxIO.h  FastxStream.cpp  FastxStream.h  Formater.cpp  Globals.h  Reference.h
